<resources>
    <string name="app_name">Namaste Meditation</string>
    <string name="enter_your_name">Enter your fullname</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="enter_your_email_we_will_send_you_confirmation_code">Enter your email, we will send you confirmation code</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_code">Didn\'t receive Code?</string>
    <string name="enter_code_that_we_have_sent_to_your_email">Enter code that we have sent to your email</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_new_password">Create New Password</string>
    <string name="create_your_new_password_to_login">Create your new password to login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_old_password">Enter Old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="create_password">Create Password</string>
    <string name="profile">Profile</string>
    <string name="music">Music</string>
    <string name="meditate">Meditate</string>
    <string name="sleep">Sleep</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">For You</string>
    <string name="if_you_re_having_trouble_getting_nmotivated_to_keep_to_your_fitness">If you\'re having trouble getting\nmotivated to keep to your fitness</string>
    <string name="popular">Popular</string>
    <string name="featured">Featured</string>
    <string name="playing_now">Playing Now</string>
    <string name="choose_time">Choose Time</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="change">Change</string>
    <string name="remind_me">Remind Me</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
</resources>