<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentInsetEnd="40dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageArrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrow_left"
            tools:src="@drawable/img_arrow_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/sign_up"
            android:textColor="@color/black_000000"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAppBar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="75dp"
            android:orientation="vertical"
            android:padding="24dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_border_name_gray_300_radius_6"
                android:drawableStart="@drawable/img_user"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:padding="14dp"
                android:textColor="@color/black_000000"
                android:textColorHint="#ABABAB"
                android:textSize="16sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_border_name_gray_300_radius_6"
                android:drawableStart="@drawable/img_checkmark"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textColor="#000000"
                android:textColorHint="@color/grey_ababab"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_border_name_gray_300_radius_6"
                android:drawableStart="@drawable/img_lock"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/black_000000"
                android:textColorHint="#ABABAB"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_border_name_gray_300_radius_6"
                android:drawableStart="@drawable/img_lock"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:hint="@string/enter_your_confirm_password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/black_000000"
                android:textColorHint="#ABABAB"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBoxCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/i_agree_to_the_terms_of_service_and_privacy_policy"
                android:textColor="@color/black_444444"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@color/green_039EA2"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@color/orangeLight"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtConfirmation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black_000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/raleway_bold"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp"
                    android:singleLine="true"
                    android:text="@string/log_in"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>