<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentInsetEnd="40dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageArrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrow_left"
            tools:src="@drawable/img_arrow_left" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAppBar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="Change Password"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/create_your_new_password_to_login"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rectangle_border_name_gray_300_radius_6"
                android:drawableStart="@drawable/img_lock"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="@color/grey_ababab"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_border_name_gray_300_radius_6"
                android:drawableStart="@drawable/img_lock"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="@color/grey_ababab"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_border_name_gray_300_radius_6"
                android:drawableStart="@drawable/img_lock"
                android:drawablePadding="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="@color/grey_ababab"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreatePassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@color/green_039EA2"
                android:ellipsize="end"
                android:fontFamily="@font/raleway_regular"
                android:gravity="center"
                android:text="@string/create_password"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>